--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="media/fire-dynamic-color.png" id="icon_fire" alt="">
                 </div>
                 <div class="banner__text">
-                    <h2>La pila moderna de inteligencia de datos en la nube para su negocio de misión crítica.</h2>
+                    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum minima explicabo officiis blanditiis fugit?</h2>
                     <a href="#">Leer más</a>
                 </div>
             </div>
