fix botton scroll

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
 
         </div>
 
+        <button id="scrollTopButton" onclick="scrollToTop()">Volver arriba</button>
+
+
     </main>
 
     <script src="js/script.js"></script>
